cors fix nr2